new design added

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,40 @@
             </nav>
         </div>
         <!-- nav end  -->
+
+        <!-- mid-section start  -->
+        <div class="mid-section">
+            <div class="left-site">
+              <h1>Travel</h1>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                  Asperiores doloremque accusantium ut officiis, rerum ipsam voluptate eligendi
+                   possimus minima a!</p>
+                
+              </div>
+            </div>
+            <div class="right-site">
+                <div class="cart cart1">
+                    <h5>Dubai</h5>
+                    <p>Negative COVID-19 test required within 48 hours</p>
+                </div>
+                <div class="cart cart2">
+                    <h5>Burj Khalifa</h5>
+                    <p>Negative COVID-19 test required within 79 hours</p>
+                </div>
+                <div class="cart cart3">
+                    <h5>Burj Al Arab</h5>
+                    <p>Negative COVID-19 test required within 12 hours</p>
+                </div>
+                <div class="cart cart4">
+                    <h5>The Dubai Mall</h5>
+                    <p>Negative COVID-19 test required within 8 hours</p>
+                </div>
+
+            </div>
+        </div>
+
+
+        <!-- mid section ends  -->
     </div>
     <!-- main container end  -->
 </body>
